--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: run build
         run: |
-             ls
              chmod +x build.sh
-             build.sh
+             ./build.sh
 
    
