--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      - name: Cache sstate
+        id: cache-sstate
+        uses: actions/cache@v2
+        with:
+          path: build-enviroment/builds/stbserver/sstate-cache
+          key: ${{ runner.os }}-cache
+      
       - name: run build
         run: |
              chmod +x build.sh
