--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,11 +22,20 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
    
+      - name: Cache sstate
+        id: cache-sstate
+        uses: actions/cache@v2
+        with:
+          path: build-enviroment/cache.tar.xz
+          key: ${{ runner.os }}-cache
       - name: run build
         run: |
              chmod +x build.sh
              ./build.sh
              du build-enviroment/builds/stbserver/sstate-cache
+      - name: pack cache
+        run: |
+             tar xvfJ build-enviroment/cache.tar.xz /build-enviroment/builds/stbserver/sstate-cache
       - name: Archive production artifacts
         uses: actions/upload-artifact@v2
         with:
