fix artifact path

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,6 @@ jobs:
         with:
           name: image
           path: |
-            build-enviroment/builds/stbserver/release/gb72604/tmp/deploy/images
+            build-enviroment.tmp/builds/stbserver/release/gb72604/tmp/deploy/images
 
    
